@@ -2,6 +2,7 @@
 
 	* Add API for reporting about configuration issues, resolves #18
 	* Update documentation settings, resolves #19
+	* Use JSON for sample files, resolves #21
 
 2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>
 
